			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04q: *********************************

IMP: (6/4/06, GVG) Configurable grid alignment buttons (full,half,quarter) (Bug #1083)

BUG: (6/3/06, GVG) Duplicating {lay} view also duplicates {ic} (Bug #1090)
FIX: If not the entire group is copied, only Schematics would trigger the copy of its icons.
Problem introduced while implementing Bug #894.

IMP: (6/2/06, SMR) "Back" button now works with text windows (Bug #324).

************************* Version 8.04p: *********************************

BUG: (6/2/06, GVG) Still exception in Analysis.getSweep(index) due to how signals
without sweeps are handled. This was introduced while fixing Bug #1077.
FIX: Detect if sweeps list is null.

BUG: (6/2/06, SMR) Excluding or including all sweeps in an analysis affects
     all sweeps in ALL analyses (Bug #1084).
FIX: In ExplorerTree.setAllSweepsAction(), compute sweeps under that node.

IMP: (6/1/06, SMR) Preferences XML is now properly formatted.

IMP: (5/31/06, SMR) Sped up waveform window when sweeps are included or
     excluded (Bug #1078).

IMP: (5/31/06, SMR) Adding an analog signal to an existing panel scales
     the panel in Y (Bug #1079).

************************* Version 8.04o: *********************************

BUG: (5/31/06, SMR) GDS input may crash (Bug #1081).
FIX: In Export.newInstance(), check for invalid names BEFORE checking for
     unique names.

BUG: (5/31/06, RK) NCC: print correct Wire counts in Part local partitioning mismatch diagnostics (Bugzilla# 1080)

BUG: (5/31/06, SMR) "Back" and "Forward" buttons don't handle "down in place"
     editing (Bug #1060).
FIX: In EditWindow, handle down-in-place data with other factors.

BUG: (5/31/06, RK) NCC: repair implementation of forced matching (Bugzilla# 713)

IMP: (5/31/06, SMR) "Select Object" now scrolls through the list as search