@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04q: *********************************
 
+BUG: (6/5/06, SMR) Cannot resize nodes with outline information (Bug #1088).
+FIX: In SizeListener.ScaleNode.doIt(), handle nodes with outlines.
+
 IMP: (6/4/06, GVG) Configurable grid alignment buttons (full,half,quarter) (Bug #1083)
 
 BUG: (6/3/06, GVG) Duplicating {lay} view also duplicates {ic} (Bug #1090)
